--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         margin: 0;
         background: linear-gradient(135deg, #ff9a9e, #fad0c4);
         font-family: "Segoe UI", sans-serif;
+        overflow: hidden;
       }
-
       .card {
         background: white;
         border-radius: 20px;
@@ -23,18 +23,15 @@
         width: 350px;
         position: relative;
       }
-
       .card h1 {
         color: #e91e63;
         margin-bottom: 30px;
         font-size: 24px;
       }
-
       .buttons {
         position: relative;
         height: 120px;
       }
-
       button {
         padding: 12px 24px;
         font-size: 18px;
@@ -43,18 +40,15 @@
         cursor: pointer;
         transition: transform 0.3s ease;
       }
-
       #yesBtn {
         background: #e91e63;
         color: white;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       }
-
       #yesBtn:hover {
         transform: scale(1.1);
         background: #d81b60;
       }
-
       #noBtn {
         background: #9e9e9e;
         color: white;
@@ -63,33 +57,92 @@
           left 0.5s ease,
           top 0.5s ease;
       }
-
-      /* Floating hearts when YES is clicked */
       .heart {
         position: fixed;
         font-size: 24px;
-        animation: floatUp 3s ease forwards;
         pointer-events: none;
       }
-
       @keyframes floatUp {
         0% {
           transform: translateY(0) scale(1);
           opacity: 1;
         }
         100% {
-          transform: translateY(-200px) scale(1.5);
+          transform: translateY(-250px) scale(1.5);
           opacity: 0;
+        }
+      }
+      /* Popup modal styling */
+      .popup {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.3s ease;
+      }
+      .popup.active {
+        opacity: 1;
+        pointer-events: auto;
+      }
+      .popup-content {
+        background: #fff;
+        border-radius: 15px;
+        padding: 30px;
+        text-align: center;
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+        animation: scaleIn 0.3s ease;
+        max-width: 300px;
+      }
+      .popup-content h2 {
+        color: #e91e63;
+        margin-bottom: 15px;
+      }
+      .popup-content p {
+        font-size: 16px;
+        margin-bottom: 20px;
+      }
+      .popup-content button {
+        background: #e91e63;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 8px;
+        cursor: pointer;
+      }
+      @keyframes scaleIn {
+        from {
+          transform: scale(0.8);
+          opacity: 0;
+        }
+        to {
+          transform: scale(1);
+          opacity: 1;
         }
       }
     </style>
   </head>
   <body>
     <div class="card">
-      <h1>💖 Will you be my Valentine? 💖</h1>
+      <h1>💖 Hey Jero!, Will you be my Valentine? 💖</h1>
       <div class="buttons">
         <button id="yesBtn">Yes</button>
         <button id="noBtn">No</button>
+      </div>
+    </div>
+
+    <!-- Popup modal -->
+    <div class="popup" id="popup">
+      <div class="popup-content">
+        <h2>Yay! ❤️</h2>
+        <p>You said YES! Lucky to have you as my Valentine 💕</p>
+        <button id="closePopup">Close</button>
       </div>
     </div>
 
@@ -97,16 +150,24 @@
       const yesBtn = document.getElementById("yesBtn");
       const noBtn = document.getElementById("noBtn");
       const buttonsDiv = document.querySelector(".buttons");
+      const popup = document.getElementById("popup");
+      const closePopup = document.getElementById("closePopup");
 
       yesBtn.addEventListener("click", () => {
-        alert("Yay! ❤️ You said YES!");
-        createHeart();
+        popup.classList.add("active");
+        // Burst of hearts
+        for (let i = 0; i < 15; i++) {
+          setTimeout(createHeart, i * 150);
+        }
+      });
+
+      closePopup.addEventListener("click", () => {
+        popup.classList.remove("active");
       });
 
       function moveNoBtn(event) {
         const maxX = buttonsDiv.offsetWidth - noBtn.offsetWidth;
         const maxY = buttonsDiv.offsetHeight - noBtn.offsetHeight;
-
         let x, y;
         do {
           x = Math.random() * maxX;
@@ -116,25 +177,29 @@
           Math.abs(event.clientX - (buttonsDiv.offsetLeft + x)) < 80 &&
           Math.abs(event.clientY - (buttonsDiv.offsetTop + y)) < 50
         );
-
         noBtn.style.left = x + "px";
         noBtn.style.top = y + "px";
       }
 
-      // Smooth escape on hover/touch
       noBtn.addEventListener("mouseover", moveNoBtn);
       noBtn.addEventListener("touchstart", moveNoBtn);
 
-      // Floating hearts
       function createHeart() {
         const heart = document.createElement("div");
         heart.className = "heart";
+        heart.innerHTML = "💖";
+
         heart.style.left = Math.random() * window.innerWidth + "px";
         heart.style.top = window.innerHeight + "px";
-        heart.innerHTML = "💖";
-        document.body.appendChild(heart);
 
-        setTimeout(() => heart.remove(), 3000);
+        const duration = 2000 + Math.random() * 2000;
+        const drift = (Math.random() - 0.5) * 200;
+
+        heart.style.animation = `floatUp ${duration}ms ease forwards`;
+        heart.style.transform = `translateX(${drift}px)`;
+
+        document.body.appendChild(heart);
+        setTimeout(() => heart.remove(), duration);
       }
     </script>
   </body>
